--- a/src/assets/design-system.css
+++ b/src/assets/design-system.css
@@ -29,7 +29,7 @@
   --color-secondary-200: #BFDBFE;
   --color-secondary-300: #93C5FD;
   --color-secondary-400: #60A5FA;
-  --color-secondary-500: #5DADE2;
+  --color-secondary-500: #2b6bf7;
   --color-secondary-600: #2563EB;
   --color-secondary-700: #1D4ED8;
   --color-secondary-800: #1E40AF;
